v3/the-basics/responses.mdx
---
title: Responses
---

## Creating Responses

Creating an Inertia response is simple. To get started, invoke the `Inertia::render()` method within your controller or route, providing both the name of the [JavaScript page component](/v3/the-basics/pages) that you wish to render, as well as any properties (data) for the page.

In the example below, we will pass a single property (`event`) which contains four attributes (`id`, `title`, `start_date` and `description`) to the `Event/Show` page component.

<CodeGroup>
```php Laravel icon="laravel"
use Inertia\Inertia;

class EventsController extends Controller
{
    public function show(Event $event)
    {
        return Inertia::render('Event/Show', [
            'event' => $event->only(
                'id',
                'title',
                'start_date',
                'description'
            ),
        ]);

        // Alternatively, you can use the inertia() helper...
        return inertia('Event/Show', [
            'event' => $event->only(
                'id',
                'title',
                'start_date',
                'description'
            ),
        ]);
    }
}
```

```csharp .NET icon="dotnet"
using InertiaCore;

public class EventsController : Controller
{
    public IActionResult Show(Event @event)
    {
        return Inertia.Render("Event/Show", new {
            Event = new {
                @event.Id,
                @event.Title,
                @event.StartDate,
                @event.Description
            }
        });
    }
}
```

</CodeGroup>

The component name may also be a Backed Enum, which is useful for organizing page components with type-safe references.

<CodeGroup>
```php Laravel icon="laravel"
enum Page: string
{
    case EventShow = 'Event/Show';
    case EventIndex = 'Event/Index';
}

return Inertia::render(Page::EventShow, [
    'event' => $event,
]);
```

```csharp .NET icon="dotnet"
public enum Page
{
    EventShow,
    EventIndex,
}

return Inertia.Render(Page.EventShow, new {
    Event = @event,
});
```

</CodeGroup>

<Tip>
  To ensure that pages load quickly, only return the minimum data required for
  the page.
</Tip>

<Note>
  Be aware that all data returned from the controllers will be visible
  client-side, so be sure to omit sensitive information.
</Note>

## Properties

To pass data from the server to your page components, you can use properties. You can pass various types of values as props, including primitive types, arrays, objects, and several Laravel-specific types that are automatically resolved:

<CodeGroup>
```php Laravel icon="laravel"
use App\Models\User;
use Illuminate\Http\Resources\Json\JsonResource;

Inertia::render('Dashboard', [
    // Primitive values
    'title' => 'Dashboard',
    'count' => 42,
    'active' => true,

    // Arrays and objects
    'settings' => ['theme' => 'dark', 'notifications' => true],

    // Arrayable objects (Collections, Models, etc.)
    'user' => auth()->user(), // Eloquent model
    'users' => User::all(), // Eloquent collection

    // API Resources
    'profile' => new UserResource(auth()->user()),

    // Responsable objects
    'data' => new JsonResponse(['key' => 'value']),

    // Closures
    'timestamp' => fn() => now()->timestamp,
]);
```

```csharp .NET icon="dotnet"
using InertiaCore;

Inertia.Render("Dashboard", new {
    // Primitive values
    Title = "Dashboard",
    Count = 42,
    Active = true,

    // Arrays and objects
    Settings = new { Theme = "dark", Notifications = true },

    // Objects from your DbContext
    User = currentUser,
    Users = _context.Users.ToList(),

    // Lazy evaluation using functions
    Timestamp = new Func<object>(() => DateTimeOffset.UtcNow.ToUnixTimeSeconds())
});
```

</CodeGroup>

Arrayable objects like Eloquent models and collections are automatically converted using their `toArray()` method. Responsable objects like API resources and JSON responses are resolved through their `toResponse()` method.

## `ProvidesInertiaProperty` Interface

When passing props to your components, you may want to create custom classes that can transform themselves into the appropriate data format. While Laravel's `Arrayable` interface simply converts objects to arrays, Inertia offers the more powerful `ProvidesInertiaProperty` interface for context-aware transformations.

This interface requires a `toInertiaProperty` method that receives a `PropertyContext` object containing the property key (`$context->key`), all props for the page (`$context->props`), and the request instance (`$context->request`).

<CodeGroup>
```php Laravel icon="laravel"
use Inertia\PropertyContext;
use Inertia\ProvidesInertiaProperty;

class UserAvatar implements ProvidesInertiaProperty
{
    public function __construct(protected User $user, protected int $size = 64)
    {
        //
    }

    public function toInertiaProperty(PropertyContext $context): mixed
    {
        return $this->user->avatar
            ? Storage::url($this->user->avatar)
            : "https://ui-avatars.com/api/?name={$this->user->name}&size={$this->size}";
    }
}
```

```csharp .NET icon="dotnet"
public class UserAvatar
{
    private readonly User _user;
    private readonly int _size;

    public UserAvatar(User user, int size = 64)
    {
        _user = user;
        _size = size;
    }

    public string Resolve() =>
        !string.IsNullOrEmpty(_user.Avatar)
            ? $"/storage/{_user.Avatar}"
            : $"https://ui-avatars.com/api/?name={_user.Name}&size={_size}";
}
```

</CodeGroup>

Once defined, you can use this class directly as a prop value.

<CodeGroup>
```php Laravel icon="laravel"
Inertia::render('Profile', [
    'user' => $user,
    'avatar' => new UserAvatar($user, 128),
]);
```

```csharp .NET icon="dotnet"
return Inertia.Render("Profile", new {
    User = user,
    Avatar = new UserAvatar(user, 128).Resolve(),
});
```

</CodeGroup>

The `PropertyContext` gives you access to the property key, which enables powerful patterns like merging with shared data.

<CodeGroup>
```php Laravel icon="laravel"
use Inertia\Inertia;
use Inertia\PropertyContext;
use Inertia\ProvidesInertiaProperty;

class MergeWithShared implements ProvidesInertiaProperty
{
    public function __construct(protected array $items = [])
    {
        //
    }

    public function toInertiaProperty(PropertyContext $context): mixed
    {
        // Access the property key to get shared data
        $shared = Inertia::getShared($context->key, []);

        // Merge with the new items
        return array_merge($shared, $this->items);
    }
}

// Usage
Inertia::share('notifications', ['Welcome back!']);

return Inertia::render('Dashboard', [
    'notifications' => new MergeWithShared(['New message received']),
    // Result: ['Welcome back!', 'New message received']
]);
```

```csharp .NET icon="dotnet"
using InertiaCore;

// Share some baseline notifications globally
var baseline = new[] { "Welcome back!" };
Inertia.Share("notifications", baseline);

// Merge the baseline with per-page additions before rendering
var notifications = baseline.Concat(new[] { "New message received" }).ToArray();

return Inertia.Render("Dashboard", new {
    Notifications = notifications,
    // Result: ["Welcome back!", "New message received"]
});
```

</CodeGroup>

## `ProvidesInertiaProperties` Interface

In some situations you may want to group related props together for reusability across different pages. You can accomplish this by implementing the `ProvidesInertiaProperties` interface.

This interface requires a `toInertiaProperties` method that returns an array of key-value pairs. The method receives a `RenderContext` object containing the component name (`$context->component`) and request instance (`$context->request`).

<CodeGroup>
```php Laravel icon="laravel"
use App\Models\User;
use Illuminate\Container\Attributes\CurrentUser;
use Inertia\RenderContext;
use Inertia\ProvidesInertiaProperties;

class UserPermissions implements ProvidesInertiaProperties
{
    public function __construct(#[CurrentUser] protected User $user)
    {
        //
    }

    public function toInertiaProperties(RenderContext $context): array
    {
        return [
            'canEdit' => $this->user->can('edit'),
            'canDelete' => $this->user->can('delete'),
            'canPublish' => $this->user->can('publish'),
            'isAdmin' => $this->user->hasRole('admin'),
        ];
    }
}
```

```csharp .NET icon="dotnet"
public class UserPermissions
{
    private readonly User _user;

    public UserPermissions(User user)
    {
        _user = user;
    }

    public object ToProps() => new {
        CanEdit = _user.Can("edit"),
        CanDelete = _user.Can("delete"),
        CanPublish = _user.Can("publish"),
        IsAdmin = _user.HasRole("admin"),
    };
}
```

</CodeGroup>

You can use these prop classes directly in the `render()` and `with()` methods.

<CodeGroup>
```php Laravel icon="laravel"
public function index(UserPermissions $permissions)
{
    return Inertia::render('UserProfile', $permissions);

    // or...

    return Inertia::render('UserProfile')->with($permissions);
}
```

```csharp .NET icon="dotnet"
public IActionResult Index()
{
    var permissions = new UserPermissions(currentUser);

    return Inertia.Render("UserProfile", permissions.ToProps());
}
```

</CodeGroup>

You can also combine multiple prop classes with other props in an array:

<CodeGroup>
```php Laravel icon="laravel"
public function index(UserPermissions $permissions)
{
    return Inertia::render('UserProfile', [
        'user' => auth()->user(),
        $permissions,
    ]);

    // or using method chaining...

    return Inertia::render('UserProfile')
        ->with('user', auth()->user())
        ->with($permissions);
}
```

```csharp .NET icon="dotnet"
public IActionResult Index()
{
    var permissions = new UserPermissions(currentUser);

    return Inertia.Render("UserProfile", new {
        User = currentUser,
        Permissions = permissions.ToProps(),
    });
}
```

</CodeGroup>

## Root Template Data

There are situations where you may want to access your prop data in your application's root Blade template. For example, you may want to add a meta description tag, Twitter card meta tags, or Facebook Open Graph meta tags. You can access this data via the `$page` variable.

<CodeGroup>
```blade Laravel icon="laravel"
<meta name="twitter:title" content="{{ $page['props']['event']->title }}">
```

```cshtml Razor (.NET) icon="dotnet"
<meta name="twitter:title" content="@Model.Props["event"].Title">
```

</CodeGroup>

Sometimes you may even want to provide data to the root template that will not be sent to your JavaScript page component. This can be accomplished by invoking the `withViewData` method.

<CodeGroup>
```php Laravel icon="laravel"
return Inertia::render('Event', ['event' => $event])
    ->withViewData(['meta' => $event->meta]);
```

```csharp .NET icon="dotnet"
return Inertia.Render("Event", new { Event = @event })
    .WithViewData(new Dictionary<string, object>
    {
        ["meta"] = @event.Meta,
    });
```

</CodeGroup>

After invoking the `withViewData` method, you can access the defined data as you would typically access a Blade template variable.

<CodeGroup>
```blade Laravel icon="laravel"
<meta name="description" content="{{ $meta }}">
```

```cshtml Razor (.NET) icon="dotnet"
<meta name="description" content="@ViewData["meta"]">
```

</CodeGroup>

## Maximum Response Size

To enable client-side history navigation, all Inertia server responses are stored in the browser's history state. However, keep in mind that some browsers impose a size limit on how much data can be saved within the history state.

For example, [Firefox](https://developer.mozilla.org/en-US/docs/Web/API/History/pushState) has a size limit of 16 MiB and throws a `NS_ERROR_ILLEGAL_VALUE` error if you exceed this limit. Typically, this is much more data than you'll ever practically need when building applications.
